--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP5tZWeBzvs5F9+3FGriuiP",
+      "authorship_tag": "ABX9TyO6/JSyf0deun0rvThH8D0L",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,11 +33,20 @@
         "id": "yclV6OF6zWE7"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "# Menyiapkan semua library yang dibutuhkan\n",
+        "import streamlit as st\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sb\n",
+        "import pandas as pd"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# DATA WRANGLING\n"
+      ],
       "metadata": {
         "id": "gdHDV4sGzm9h"
       },
