--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO6/JSyf0deun0rvThH8D0L",
+      "authorship_tag": "ABX9TyOKaLEIPIYegOanlAs8VX4w",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,6 +27,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#**Menyiapkan semua library yang dibutuhkan**"
+      ],
+      "metadata": {
+        "id": "kqtBZJ_A1XwI"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -34,24 +43,65 @@
       },
       "outputs": [],
       "source": [
-        "# Menyiapkan semua library yang dibutuhkan\n",
         "import streamlit as st\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sb\n",
-        "import pandas as pd"
+        "import pandas as pd\n",
+        "import plotly.express as px"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **DATA WRANGLING**"
+      ],
+      "metadata": {
+        "id": "iI20MaO61GcJ"
+      }
     },
     {
       "cell_type": "code",
       "source": [
-        "# DATA WRANGLING\n"
+        "@st.cache_data\n",
+        "def load_data():\n",
+        "    file_path = \"day.csv\"  # Pastikan file berada di lokasi ini atau sesuaikan\n",
+        "    data = pd.read_csv(file_path)\n",
+        "    data['dteday'] = pd.to_datetime(data['dteday'])\n",
+        "    data.rename(columns={\n",
+        "        'yr': 'year',\n",
+        "        'mnth': 'month',\n",
+        "        'weathersit': 'weather',\n",
+        "        'hum': 'humidity',\n",
+        "        'cnt': 'total_rentals'\n",
+        "    }, inplace=True)\n",
+        "    data['is_weekend'] = data['weekday'].apply(lambda x: 1 if x in [0, 6] else 0)\n",
+        "    season_mapping = {1: 'Spring', 2: 'Summer', 3: 'Fall', 4: 'Winter'}\n",
+        "    data['season_name'] = data['season'].map(season_mapping)\n",
+        "    return data\n"
       ],
       "metadata": {
-        "id": "gdHDV4sGzm9h"
+        "id": "gdHDV4sGzm9h",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 211
+        },
+        "outputId": "aa453277-61df-475a-a122-de58615567f8"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'st' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-f8fe5ddc0851>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m@\u001b[0m\u001b[0mst\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcache_data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mload_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mfile_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"day.csv\"\u001b[0m  \u001b[0;31m# Pastikan file berada di lokasi ini atau sesuaikan\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'dteday'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_datetime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'dteday'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'st' is not defined"
+          ]
+        }
+      ]
     }
   ]
 }
