--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOKaLEIPIYegOanlAs8VX4w",
+      "authorship_tag": "ABX9TyMlz3Ajox00SkAzlOcIYP5/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -78,30 +78,80 @@
         "    data['is_weekend'] = data['weekday'].apply(lambda x: 1 if x in [0, 6] else 0)\n",
         "    season_mapping = {1: 'Spring', 2: 'Summer', 3: 'Fall', 4: 'Winter'}\n",
         "    data['season_name'] = data['season'].map(season_mapping)\n",
-        "    return data\n"
+        "    return data\n",
+        "    # Load data\n",
+        "data = load_data()\n",
+        "\n",
+        "# Streamlit app\n",
+        "st.title(\"Data Analysis Dashboard Rental Sepeda\")\n",
+        "\n",
+        "# Sidebar for filtering\n",
+        "year_filter = st.sidebar.multiselect(\"Select Year\", options=data['year'].unique(), default=data['year'].unique())\n",
+        "season_filter = st.sidebar.multiselect(\"Select Season\", options=data['season_name'].unique(), default=data['season_name'].unique())\n",
+        "\n",
+        "# Filter data based on user input\n",
+        "filtered_data = data[(data['year'].isin(year_filter)) & (data['season_name'].isin(season_filter))]\n",
+        "\n",
+        "# Display raw data\n",
+        "if st.checkbox(\"Show Raw Data\"):\n",
+        "    st.subheader(\"Raw Data\")\n",
+        "    st.write(filtered_data)\n",
+        "\n",
+        "# Basic Statistics\n",
+        "st.subheader(\"Basic Statistics\")\n",
+        "st.write(filtered_data.describe())\n"
       ],
       "metadata": {
-        "id": "gdHDV4sGzm9h",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 211
-        },
-        "outputId": "aa453277-61df-475a-a122-de58615567f8"
+        "id": "gdHDV4sGzm9h"
       },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'st' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-1-f8fe5ddc0851>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m@\u001b[0m\u001b[0mst\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcache_data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mload_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mfile_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"day.csv\"\u001b[0m  \u001b[0;31m# Pastikan file berada di lokasi ini atau sesuaikan\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'dteday'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_datetime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'dteday'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'st' is not defined"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Exploratory Data Analysis"
+      ],
+      "metadata": {
+        "id": "Idya81X09VoU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exploratory Data Analysis (EDA)\n",
+        "st.subheader(\"Exploratory Data Analysis\")\n",
+        "\n",
+        "# Total rentals by season\n",
+        "season_rentals = filtered_data.groupby('season_name')['total_rentals'].sum()\n",
+        "st.bar_chart(season_rentals, use_container_width=True)\n",
+        "\n",
+        "# Total rentals by year\n",
+        "year_rentals = filtered_data.groupby('year')['total_rentals'].sum()\n",
+        "st.line_chart(year_rentals, use_container_width=True)\n",
+        "\n",
+        "# Scatter plot for temperature vs rentals\n",
+        "st.subheader(\"Temperature vs Total Rentals\")\n",
+        "st.write(\"Scatter plot showing the relationship between temperature and total rentals.\")\n",
+        "st.plotly_chart(\n",
+        "    px.scatter(filtered_data, x='temp', y='total_rentals', color='season_name',\n",
+        "               labels={'temp': 'Temperature', 'total_rentals': 'Total Rentals'})\n",
+        ")\n",
+        "# Conclusion\n",
+        "st.subheader(\"Conclusion\")\n",
+        "st.markdown(\n",
+        "    \"\"\"\n",
+        "    - Bike rentals are influenced by season and temperature.\n",
+        "    - Summer and Fall seasons have higher rental numbers.\n",
+        "    - Warmer temperatures correlate with higher rentals.\n",
+        "    \"\"\"\n",
+        ")\n"
+      ],
+      "metadata": {
+        "id": "hcv61sW89mvl"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
