--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMlz3Ajox00SkAzlOcIYP5/",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyM2mMgVYvCbyBC/41J5NIHH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +30,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#**Menyiapkan semua library yang dibutuhkan**"
+        "#Menyiapkan semua library yang dibutuhkan"
       ],
       "metadata": {
         "id": "kqtBZJ_A1XwI"
@@ -54,7 +55,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **DATA WRANGLING**"
+        "# Data Wrangling"
       ],
       "metadata": {
         "id": "iI20MaO61GcJ"
@@ -63,10 +64,27 @@
     {
       "cell_type": "code",
       "source": [
+        "# Gathering Data\n",
         "@st.cache_data\n",
-        "def load_data():\n",
+        "def load_raw_data():\n",
         "    file_path = \"day.csv\"  # Pastikan file berada di lokasi ini atau sesuaikan\n",
         "    data = pd.read_csv(file_path)\n",
+        "    return data\n",
+        "\n",
+        "# Assessing Data\n",
+        "@st.cache_data\n",
+        "def assess_data(data):\n",
+        "    issues = {}\n",
+        "    if data.isnull().sum().any():\n",
+        "        issues['missing_values'] = data.isnull().sum().to_dict()\n",
+        "    if (data.dtypes == object).any():\n",
+        "        issues['object_columns'] = data.select_dtypes(include=['object']).columns.tolist()\n",
+        "    return issues\n",
+        "\n",
+        "# Cleaning Data\n",
+        "@st.cache_data\n",
+        "def clean_data(raw_data):\n",
+        "    data = raw_data.copy()\n",
         "    data['dteday'] = pd.to_datetime(data['dteday'])\n",
         "    data.rename(columns={\n",
         "        'yr': 'year',\n",
@@ -79,8 +97,11 @@
         "    season_mapping = {1: 'Spring', 2: 'Summer', 3: 'Fall', 4: 'Winter'}\n",
         "    data['season_name'] = data['season'].map(season_mapping)\n",
         "    return data\n",
-        "    # Load data\n",
-        "data = load_data()\n",
+        "\n",
+        "# Load raw data and process it\n",
+        "raw_data = load_raw_data()\n",
+        "data_issues = assess_data(raw_data)\n",
+        "data = clean_data(raw_data)\n",
         "\n",
         "# Streamlit app\n",
         "st.title(\"Data Analysis Dashboard Rental Sepeda\")\n",
@@ -126,6 +147,26 @@
         "season_rentals = filtered_data.groupby('season_name')['total_rentals'].sum()\n",
         "st.bar_chart(season_rentals, use_container_width=True)\n",
         "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "hcv61sW89mvl"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Visualisasi Data"
+      ],
+      "metadata": {
+        "id": "_Ld2e6baAAMr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Total rentals by year\n",
         "year_rentals = filtered_data.groupby('year')['total_rentals'].sum()\n",
         "st.line_chart(year_rentals, use_container_width=True)\n",
@@ -145,10 +186,10 @@
         "    - Summer and Fall seasons have higher rental numbers.\n",
         "    - Warmer temperatures correlate with higher rentals.\n",
         "    \"\"\"\n",
-        ")\n"
+        ")"
       ],
       "metadata": {
-        "id": "hcv61sW89mvl"
+        "id": "ZOUVfTbtADiJ"
       },
       "execution_count": null,
       "outputs": []
