--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM2mMgVYvCbyBC/41J5NIHH",
+      "authorship_tag": "ABX9TyPFBEW/j4vvH40pBjS2wNzS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,6 +64,12 @@
     {
       "cell_type": "code",
       "source": [
+        "import streamlit as st\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sb\n",
+        "import pandas as pd\n",
+        "import plotly.express as px\n",
         "# Gathering Data\n",
         "@st.cache_data\n",
         "def load_raw_data():\n",
